--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "2"
 services:
   webserver:
     image: php:7.4.3-apache
@@ -6,3 +5,5 @@ services:
       - "8181:80"
     volumes:
       - ./UnamWebPanel:/var/www/html
+    command: >
+      sh -c "chown -R www-data:www-data /var/www/html/db && chmod -R 777 /var/www/html/db && apache2-foreground"
